--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,5 +28,5 @@
 	"postCreateCommand": "sh .devcontainer/post-create.sh",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "jekyll"
+	// "remoteUser": "vscode"
 }
