--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 twitter_username: lybecker
 github_username:  lybecker
 
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.lybecker.com" # the base hostname & protocol for your site, e.g. http://example.com
 analytics:
   provider: "google-gtag"
