--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ remote_theme: mmistakes/minimal-mistakes
 # permalink: /:categories/:title/
 paginate: 10 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: CET # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -78,7 +78,7 @@ plugins:
 
 author:
   name   : "Anders Lybecker"
-  avatar : "/assets/images/tFu59nbH_400x400.jpg"
+  avatar : "/assets/images/anders_lybecker_400x400.jpg"
   bio    : "Anders Lybecker is a Software Development Engineering Lead, former Global Black Belt IoT specialist and Technical Evangelist at Microsoft."
   location : "Copenhagen, Denmark"
   links:
