Fixed all posts

--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -1,2 +1,2 @@
-dotnetframeworkwarning: '**Note:** This post refers to .NET Framework for Windows only, and not for the cross-platform .NET Core or simply .NET as it is re-branded in 2020.'
+dotnetframeworkwarning: '**Note:** This post refers to .NET Framework for Windows only, and not for the cross-platform .NET Core or simply .NET as it is re-branded in 2020. This means this post is outdated for newer version of .NET'
 
