--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ plugins:
 author:
   name   : "Anders Lybecker"
   avatar : "/assets/images/anders_lybecker_400x400.jpg"
-  bio    : "Anders Lybecker is a Software Development Engineering Lead, former Global Black Belt IoT specialist and Technical Evangelist at Microsoft."
+  bio    : "Engineering lead at Microsoft helping strategic important customers with their digital transformation journey to the cloud."
   location : "Copenhagen, Denmark"
   links:
     - label: "Twitter"
